# uutisvirta

./: .env.example  .gitignore  CLAUDE.md  index.html  pyproject.toml
.claude/: settings.json
.github/workflows/: daily-digest.yml
ammatillinen-osaaminen/: 2026-07-22.html  2026-07-23.html  index.html
datascience-konsultointi/: 2026-07-22.html  2026-07-23.html  2026-07-23.json  2026-07-24.html  2026-07-24.json  index.html
era/: 2026-07-22.html  2026-07-23.html  index.html
era-seikkailu/: 2026-07-23.html  2026-07-23.json  index.html
politiikka/: 2026-07-22.html  2026-07-23.html  2026-07-23.json  2026-07-24.html  2026-07-24.json  index.html
src/uutisvirta/: fetcher.py  generator.py  homepage.py  llm.py  main.py
src/uutisvirta/templates/: base.html.j2  digest.html.j2  homepage.html.j2  master_index.html.j2  stream_index.html.j2
streams/: ammatillinen-osaaminen.yaml  datascience-konsultointi.yaml  era-seikkailu.yaml  era.yaml  politiikka.yaml
tests/: test_homepage.py
