[project]
name = "uutisvirta"
version = "0.1.0"
description = "Henkilökohtainen tekoälyavusteinen uutisdigestityökalu"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "openai>=1.50",
    "markdown-it-py>=3.0",
    "click>=8.1",
]

[project.scripts]
uutisvirta = "uutisvirta.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uutisvirta"]

[tool.hatch.build.targets.editable]
mode = "compat"
